--- a/Secondclass/index.html
+++ b/Secondclass/index.html
@@ -76,16 +76,42 @@
 
         if (number_ejer2 % 2 === 0 && number_ejer2 < 30)
         { 
-            console.log('si cumple con primera')
+            console.log('si cumple con primera');
         } else if ( number_ejer2 >= 30 &&  number_ejer2 < 50){
-            console.log ('cumple con la segunda')
+            console.log ('cumple con la segunda');
         }  else {
-            console.log ('Que diablos haces?')
+            console.log ('Que diablos haces?');
         };
-        //ciclo while ejemplo
-        while (){
-
+        //ciclo while ejemplo ++ -- += -= *= /=
+        //     var numb_ejem_2 = 0;
+        //    number += -50;
+        //    += -5;
+        //    -= -5;
+        //otro ejercicio imprimir multiplos de tres mientras que el numero sea menor a 100
+        // var num_ejer3= 0;
+        // while ( num_ejer3 < 100){
+        //     if ( num_ejer3 % 3 === 0 ){
+        //     console.log (num_ejer3);
+        //     }
+        //     num_ejer3 ++;
+        // }
+        //--------
+        ///for 
+        // for (var i= 0; i<100; i++)
+        for (var i= 100; i>0; i--){
+            console.log(i);
         }
+        //tarea ejercicio de while tabla ascii argumento
+        //typeof 'hola' es 'string'
+        //un metodo es una funcion dentro de un objeto, que aplica algo, es un pedazo de codigo que siempre va a realizar la misma funcion; el metodo recibe un argumento
+        //busca desde una position dada y empieza apartir de ahi
+        var  greeting ='Hello Word'
+        greeting.length //total de letras en la palabra
+        greeting.indexOf('W') 6
+        greeting.indexOf('l') 2
+        greeting.indexOf('l', 3)  3
+
+
     </script>
 </body>
 </html>
