--- a/Thirdclass/index.html
+++ b/Thirdclass/index.html
@@ -162,6 +162,9 @@
             })
             console.log (lista)
 
+            // hay metodos una de ejeccion pero los otros esperan una funcion de respuesta 
+            //parametos los señalas y argumento los mandas a llamar
+
         </script>
     </body>
 
