[UPDATE] actualizacion de archivos

--- a/Secondclass/index.html
+++ b/Secondclass/index.html
@@ -188,6 +188,10 @@
             console.log(palindromo + " no es palindromo");
         }
 
+           //devolver true o false de unapalabra dada si la palabra tiene mas de 3 vocales
+
+           
+
     </script>
 </body>
 </html>
