--- a/Firstclass/index.html
+++ b/Firstclass/index.html
@@ -71,6 +71,12 @@
             //tipos de datos hay seis tipos de datos: string, number, booleans, null, undefined, symbol (ecmascript6) el typeof se antepone a la variable si declaro una variable x es undefined no esta definida; undefined no se le asigno un valor es de tipo undefined y null esta vacio object
             // desde ahora se debera usar === o !==
             //verificar tipos de datos de todo
+            var a =2
+            var b= 3
+            var ft= a+b
+            var tcp = (a+b)*(a+b)
+            console.log(tcp);
+            
 
         </script>
     </body>
