[ADD] carpeta clase 14

--- a/Thirteenthclass/index.html
+++ b/Thirteenthclass/index.html
@@ -16,6 +16,10 @@
         <li class="on" id="lista" >Lista de elementos a cambiar numero 5</li>
     </ul>
 
+    <input type="number" name="" id="MXN" onchange="changes(this)" placeholder="MXN">
+    <input type="number" name="" id="USD" onchange="chang(this)" placeholder="USD">
+    <input type="number" name="" id="USD" onchange="chang(this)" placeholder="EUR">
+
 
 <!--     dada una lista no ordenada con n elemento uno al hover
     dos clases uno en estado on y otro en estado off, cuando pase el cursor por encima del elemento se va a iluminar con el estado on, cuando se de click se debe activar -->
